[gd_scene load_steps=13 format=2]

[ext_resource path="res://scenes/ClearData.gd" type="Script" id=1]
[ext_resource path="res://assets/UbuntuTitleFont.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/descriptor_m.png" type="Texture" id=3]
[ext_resource path="res://assets/font/Anton-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/font/AbyssinicaSIL-Regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://prefabs/Transition.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/sfx/ambient.mp3" type="AudioStream" id=7]
[ext_resource path="res://assets/ui/ui_btn_bg_1.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=1]
size = 40
outline_color = Color( 0.231373, 0.196078, 0.196078, 1 )
extra_spacing_char = 4
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=5]
size = 22
outline_color = Color( 0.0784314, 0.0784314, 0.0784314, 1 )
extra_spacing_top = 1
extra_spacing_bottom = 1
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
size = 20
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
outline_color = Color( 0.0784314, 0.0784314, 0.0784314, 1 )
extra_spacing_bottom = -2
font_data = ExtResource( 2 )

[node name="ClearData" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [ 43.0 ]
}

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0823529, 0.0823529, 0.0823529, 1 )

[node name="StopMouse" type="ColorRect" parent="Background"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 1, 1, 1, 0 )

[node name="b1" type="ColorRect" parent="Background/StopMouse"]
anchor_right = 1.0
margin_bottom = 10.0
color = Color( 0.188235, 0.211765, 0.337255, 1 )

[node name="b2" type="ColorRect" parent="Background/StopMouse"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -10.0
color = Color( 0.188235, 0.211765, 0.337255, 1 )

[node name="b3" type="ColorRect" parent="Background/StopMouse"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -10.0
color = Color( 0.188235, 0.211765, 0.337255, 1 )

[node name="b4" type="ColorRect" parent="Background/StopMouse"]
anchor_bottom = 1.0
margin_right = 10.0
color = Color( 0.188235, 0.211765, 0.337255, 1 )

[node name="lbl_title" type="Label" parent="."]
anchor_right = 1.0
margin_top = 22.0
margin_bottom = 82.0
custom_colors/font_color = Color( 0.658824, 0.658824, 0.658824, 1 )
custom_constants/line_spacing = -2
custom_fonts/font = SubResource( 1 )
text = "clear  data"
align = 1
valign = 1
autowrap = true

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -209.0
margin_top = -112.0
margin_right = 210.0
margin_bottom = 29.0
custom_colors/font_color = Color( 0.807843, 0.807843, 0.807843, 1 )
custom_constants/line_spacing = -2
custom_fonts/font = SubResource( 5 )
text = "Si borras los datos guardados perderas todos tus progresos y mejoras, estas seguro de querer hacer esto?"
align = 1
valign = 1
autowrap = true

[node name="btn_yes" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 39.5
margin_top = 71.5
margin_right = 168.5
margin_bottom = 111.5
custom_colors/font_color = Color( 0.796078, 0.796078, 0.796078, 1 )
custom_fonts/font = SubResource( 3 )
flat = true
__meta__ = {
"_edit_group_": true
}

[node name="BgButton1" type="TextureRect" parent="btn_yes"]
modulate = Color( 0.92549, 0.92549, 0.92549, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -1.0
margin_bottom = -1.0
texture = ExtResource( 8 )
expand = true

[node name="Panel" type="NinePatchRect" parent="btn_yes"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 32, 32 )
patch_margin_left = 13
patch_margin_top = 19
patch_margin_right = 13
patch_margin_bottom = 19

[node name="Label" type="Label" parent="btn_yes"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0.862745, 0.862745, 0.862745, 1 )
custom_constants/line_spacing = -2
custom_fonts/font = SubResource( 4 )
text = "yes"
align = 1
valign = 1
autowrap = true

[node name="btn_no" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -168.5
margin_top = 71.5
margin_right = -39.5
margin_bottom = 111.5
custom_colors/font_color = Color( 0.796078, 0.796078, 0.796078, 1 )
custom_fonts/font = SubResource( 3 )
flat = true
__meta__ = {
"_edit_group_": true
}

[node name="BgButton1" type="TextureRect" parent="btn_no"]
modulate = Color( 0.92549, 0.92549, 0.92549, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -1.0
margin_bottom = -1.0
texture = ExtResource( 8 )
expand = true

[node name="Panel" type="NinePatchRect" parent="btn_no"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 32, 32 )
patch_margin_left = 13
patch_margin_top = 19
patch_margin_right = 13
patch_margin_bottom = 19

[node name="Label" type="Label" parent="btn_no"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0.862745, 0.862745, 0.862745, 1 )
custom_constants/line_spacing = -2
custom_fonts/font = SubResource( 4 )
text = "no"
align = 1
valign = 1
autowrap = true

[node name="Transition" parent="." instance=ExtResource( 6 )]
visible = false

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -4.0
pitch_scale = 0.5
autoplay = true
